#
# Copyright (C) 2003-2006 Intel Corporation
# 
# This program is free software; you can redistribute it and/or
# modify it under the terms of the GNU General Public License
# as published by the Free Software Foundation; either version 2
# of the License, or (at your option) any later version.
# 
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
# 
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
# 
#

nobase_include_HEADERS =	asim/AnnotationItem.h \
				asim/ColorMenuItem.h \
				asim/agt_syntax.h \
				asim/AGTTypes.h \
				asim/AColorDialog.h \
				asim/AnnotationLine.h \
				asim/AnnotationContainer.h \
				asim/ColumnShadows.h \
				asim/AnnotationAutoBezierArrow.h \
				asim/AnnotationRect.h \
				asim/HelpWindow.h \
				asim/AnnotationCircle.h \
				asim/AScrollView.h \
				asim/Main.h \
				asim/AnnotationCtrl.h \
				asim/bookmark.h \
				asim/snapDialog.h \
				asim/AnnotationFactory.h \
				asim/bookmarkImpl.h \
				asim/snapDialogImpl.h \
				asim/AnnotationItemDB.h \
				asim/BookmarkMgr.h \
				asim/UpdColorInterface.h \
				asim/MDIWindow.h \
			  	asim/xpm/fillColor.xpm \
		     	asim/xpm/panningCursor.xpm \
				asim/xpm/viewmag+.xpm \
				asim/xpm/annCircle.xpm \
				asim/xpm/grayTexture.bmp \
				asim/xpm/pdown.xpm \
				asim/xpm/viewmag-.xpm \
				asim/xpm/annLine.xpm \
				asim/xpm/help_back.xpm \
				asim/xpm/penColor.xpm \
				asim/xpm/zhm.xpm \
				asim/xpm/annRect.xpm \
				asim/xpm/help_contents.xpm \
				asim/xpm/resetarto.xpm \
				asim/xpm/zhp.xpm \
				asim/xpm/annText.xpm \
				asim/xpm/help_forward.xpm \
				asim/xpm/selectTool.xpm \
				asim/xpm/zoomingCursor.xpm \
				asim/xpm/distanceTool.xpm \
				asim/xpm/help_home.xpm \
				asim/xpm/selectToolBar.xpm \
				asim/xpm/zoomingTool.xpm \
				asim/xpm/fileopen.xpm \
				asim/xpm/mwandCursor.xpm \
				asim/xpm/shadingCursor.xpm \
				asim/xpm/zoomingToolBar.xpm \
				asim/xpm/fileprint.xpm \
				asim/xpm/mwandTool.xpm \
				asim/xpm/shadingTool.xpm	\
				asim/xpm/zvm.xpm \
				asim/xpm/filesave.xpm \
				asim/xpm/paddingTool.xpm \
				asim/xpm/textColor.xpm \
				asim/xpm/zvp.xpm
