#
# Copyright (C) 2003-2006 Intel Corporation
# 
# This program is free software; you can redistribute it and/or
# modify it under the terms of the GNU General Public License
# as published by the Free Software Foundation; either version 2
# of the License, or (at your option) any later version.
# 
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
# 
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
# 
#

nobase_include_HEADERS = asim/xmlout.h \
		asim/address.h\
		asim/agequeue.h\
		asim/alphaops.h\
		asim/arch_register.h\
		asim/arraylist.h\
		asim/atoi.h\
		asim/atomic.h\
		asim/buffer.h\
		asim/cache.h\
		asim/cache_dyn.h\
		asim/cache_mesi.h\
		asim/chip_component.h\
		asim/chunk.h\
		asim/chunkedqueue.h\
		asim/clockable.h\
		asim/clockserver.h\
		asim/cmd.h\
		asim/damqueue.h\
		asim/deque.h\
		asim/disasm.h\
		asim/dynhashtable.h\
		asim/event.h\
		asim/except.h\
		asim/fastlist.h\
		asim/fifo.h\
		asim/funnel.h\
		asim/hashtable.h\
		asim/ioformat.h\
		asim/item.h\
		asim/mesg.h\
		asim/message_handler_log.h\
		asim/mm.h\
		asim/mmptr.h\
		asim/module.h\
		asim/orderedDAMQueue.h\
		asim/port.h\
		asim/profile.h\
		asim/queue.h\
		asim/rate_matcher.h\
		asim/registry.h\
		asim/resource_stats.h\
		asim/sized_stl_queue.h\
		asim/smp.h\
		asim/stack.h\
		asim/stackdump.h\
		asim/state.h\
		asim/stateout.h\
		asim/storage.h\
		asim/stripchart.h\
		asim/syntax.h\
		asim/thread.h\
		asim/threaded_log.h\
		asim/trace.h\
		asim/trackmem.h\
		asim/traps.h\
		asim/utils.h\
		asim/vector.h\
		asim/xcheck.h\
		asim/xmlout-gdome.h\
		asim/xmlout-nolib.h\
		asim/regexobj.h\
		asim/trace_legacy.h\
		asim/pool_allocated_object.h\
		asim/cache_manager.h\
		asim/line_status.h

