#
# Copyright (C) 2003-2006 Intel Corporation
# 
# This program is free software; you can redistribute it and/or
# modify it under the terms of the GNU General Public License
# as published by the Free Software Foundation; either version 2
# of the License, or (at your option) any later version.
# 
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
# 
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
# 
#

nobase_include_HEADERS =	asim/dralClientAscii_v0_1.h \
				asim/dralServerBinaryDefines.h \
				asim/dralClientBinary_v0_1.h \
				asim/dralServerBinary.h \
				asim/dralClientBinary_v2.h \
				asim/dralClientBinary_v3.h \
				asim/dralClientBinary_v4.h \
				asim/dralServerDefines.h \
				asim/dralClientDefines.h \
				asim/dralServer.h \
				asim/dralClient.h \
				asim/dralServerImplementation.h \
				asim/dralClientImplementation.h \
				asim/dralCommonDefines.h \
				asim/dralStorage.h \
				asim/dralListener.h \
				asim/dralWrite.h \
				asim/dralRead.h \
				asim/dralServerAscii.h \
				asim/dral_syntax.h \
				asim/dralInterface.h \
				asim/dralListenerConverter.h \
				asim/dralListenerOld.h \
				asim/dralStringMapping.h \
				asim/line_manager.h
